--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
