--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^1.12.0"
